Fix article not hiding/showing sometimes on mobile

--- a/style.css
+++ b/style.css
@@ -161,12 +161,12 @@ article {
     }
 
     #sidebar[open="true"] + article {
-        display: none;
+        display: none !important;
     }
 
     #sidebar[open="false"] + article {
         line-height: 1.5;
-        display: inline-block;
+        display: inline-block !important;
         width: calc(95%);
     }
 
